test/sema/typeck/module/struct-field-not-accessible.out
error: element is not accessible.
--> struct-field-not-accessible.dora:1:30
 | fn f(x: foo::Foo) { let _a = x.bar; }
                                ~~~~~
 | mod foo { pub struct Foo { bar: Int32 } }
 | 
1 error found.
