test/sema/typeck/module/struct-field-not-accessible.dora
fn f(x: foo::Foo) { let _a = x.bar; }
mod foo { pub struct Foo { bar: Int32 } }
